objects/Policy_Certificate__c/Policy_Certificate__c.object-meta.xml
<CustomObject>
    <label>Policy Certificate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>